--- a/index.html
+++ b/index.html
@@ -9,6 +9,26 @@
     <title>Tic-Tac-Toe</title>
 </head>
 <body>
-    
+    <header>Tic-Tac-Toe</header>
+    <main>
+        <div class="status">Player X's turn</div>
+        <div class="playing-area">
+            <div class="board">
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+            </div>
+        </div>
+        <div class="restart">
+            <button>Restart</button>
+        </div>
+    </main>
+    <footer>&#169; Copyright Azim Ahmed Bijapur 2023</footer>
 </body>
 </html>
