--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
         <div class="status">Player X's turn</div>
         <div class="playing-area">
             <div class="board">
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
+                <div class="cell" data-num="0"></div>
+                <div class="cell" data-num="1"></div>
+                <div class="cell" data-num="2"></div>
+                <div class="cell" data-num="3"></div>
+                <div class="cell" data-num="4"></div>
+                <div class="cell" data-num="5"></div>
+                <div class="cell" data-num="6"></div>
+                <div class="cell" data-num="7"></div>
+                <div class="cell" data-num="8"></div>
             </div>
         </div>
-        <div class="restart">
+        <div class="restart" onclick="restartGame()">
             <button>Restart</button>
         </div>
     </main>
